fixed spacing with my picture

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -5,8 +5,7 @@
     background-color: grey;
     height: 350px;
     width: 350px;
-    position: relative;
-    right: 10px;
+
 }
 
 .game {
@@ -57,8 +56,8 @@
         margin-right: auto;
     }
     div#goodboy {
-        margin-left: auto;
-        margin-right: auto;
+        float: none;
+        margin-right: 30px;
     }
     h2 {
         text-align: center;
@@ -77,7 +76,9 @@
         height: 250px;
         width: 250px;
     }
-
+    div.navbar {
+        padding-bottom: 15px;
+    }
 }
 
 
